--- a/03-tail/bibliography.bib
+++ b/03-tail/bibliography.bib
@@ -1,9 +1,73 @@
-@article{stateoftheArt,
-  title = {State-of-the-{{Art}} Des {{State}}-of-the-{{Art}}},
-  author = {Fettke, Peter},
-  year = {2006},
-  pages = {257--266},
-  doi = {10.1007/s11576-006-0057-3},
-  abstract = {The world-wide increasing amount of literature makes it necessary to describe, to synthesize, to evaluate, to clarify, or to integrate the results of papers in a particular field of research. Today, the process of conducting a literature review is seen as a scientific procedure, which should be guided by appropriate research methods. This paper analyzes the achieved research level in the Information Systems discipline from a methodological point of view. As a sample we use all articles from the column ,,State-of-the-Art'' of the journal WIRTSCHAFT-SINFORMATIK. The study shows that this research method is common in Information Systems research. However, several important aspects for further development are identified: (1) Until now no mathematical-statistical analysis has been used. (2) Research methods used in the primary papers are not taken into account by reviews. (3) No explicit objectives are discussed by about one third of the articles in the sample. (4) The selection of literature used as a basis for the review is not explicated in any article. (5) About one half of the reviewed articles do not discuss further research questions.},
-  journal = {Wirtschaftsinformatik}
+@online{-HackingModbus2021,
+  title = {Hacking: {{Modbus}}},
+  shorttitle = {Hacking},
+  author = {{segfaultx00}},
+  date = {2021-07-07T15:09:35+02:00},
+  url = {https://scadasploit.dev/posts/2021/07/hacking-modbus/},
+  urldate = {2024-05-29},
+  abstract = {One of the challenges of pentesting in the OT/ICS environment is given by the protocols used which can also be very different from those of IT. ICS installations use a wide variety of protocols that often have little in common with standard Ethernet and TCP/IP. This difference has been the strong point of OT installations for years, protecting them through the mechanism of “security by obscurity”. Now that these protocols are becoming more known and understood, security concerns in these facilities have been heightened.},
+  langid = {english},
+  file = {/home/remi/Zotero/storage/RWHWWZG3/hacking-modbus.html}
+}
+
+@inproceedings{IEEEXplore-IntrusionDetectionIndustrial2017,
+  title = {Intrusion {{Detection}} of {{Industrial Control System Based}} on {{Modbus TCP Protocol}}},
+  booktitle = {2017 {{IEEE}} 13th {{International Symposium}} on {{Autonomous Decentralized System}} ({{ISADS}})},
+  author = {Yusheng, Wang and Kefeng, Fan and Yingxu, Lai and Zenghui, Liu and Ruikang, Zhou and Xiangzhen, Yao and Lin, Li},
+  date = {2017-03},
+  pages = {156--162},
+  doi = {10.1109/ISADS.2017.29},
+  url = {https://ieeexplore.ieee.org/document/7940233},
+  urldate = {2024-05-28},
+  abstract = {Modbus over TCP/IP is one of the most popular industrial network protocol that are widely used in critical infrastructures. However, vulnerability of Modbus TCP protocol has attracted widely concern in the public. The traditional intrusion detection methods can identify some intrusion behaviors, but there are still some problems. In this paper, we present an innovative approach, SD-IDS (Stereo Depth IDS), which is designed for perform real-time deep inspection for Modbus TCP traffic. SD-IDS algorithm is composed of two parts: rule extraction and deep inspection. The rule extraction module not only analyzes the characteristics of industrial traffic, but also explores the semantic relationship among the key field in the Modbus TCP protocol. The deep inspection module is based on rule-based anomaly intrusion detection. Furthermore, we use the online test to evaluate the performance of our SD-IDS system. Our approach get a low rate of false positive and false negative.},
+  eventtitle = {2017 {{IEEE}} 13th {{International Symposium}} on {{Autonomous Decentralized System}} ({{ISADS}})},
+  keywords = {deep inspection,Industrial control,industrial control systems,Inspection,Integrated circuits,Intrusion detection,Lenses,period,protocol parsing,Protocols,semantic analysis},
+  file = {/home/remi/Zotero/storage/HVKY5WZQ/Yusheng et al. - 2017 - Intrusion Detection of Industrial Control System B.pdf;/home/remi/Zotero/storage/73AR7GQ6/7940233.html}
+}
+
+@online{ISO-OSI_model-74981-1,
+  title = {{{ISO}}/{{IEC}} 7498-1:1994},
+  shorttitle = {{{ISO}}/{{IEC}} 7498-1},
+  date = {1994-11},
+  url = {https://connect.snv.ch/en/isoiec-7498-1-1994},
+  urldate = {2024-05-29},
+  abstract = {Information technology -- Open Systems Interconnection -- Basic Reference Model: The Basic Model},
+  langid = {english},
+  organization = {Swiss Association for Standardization (SNV)},
+  file = {/home/remi/Zotero/storage/DB3M2N26/1994 - ISOIEC 7498-11994.pdf;/home/remi/Zotero/storage/FF7FPESV/isoiec-7498-1-1994.html}
+}
+
+@inreference{Wikipedia-DenialofserviceAttack2024,
+  title = {Denial-of-Service Attack},
+  booktitle = {Wikipedia},
+  date = {2024-05-27T16:23:18Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Denial-of-service_attack&oldid=1225934024#DDoS_extortion},
+  urldate = {2024-05-28},
+  abstract = {In computing, a denial-of-service attack (DoS attack) is a cyber-attack in which the perpetrator seeks to make a machine or network resource unavailable to its intended users by temporarily or indefinitely disrupting services of a host connected to a network. Denial of service is typically accomplished by flooding the targeted machine or resource with superfluous requests in an attempt to overload systems and prevent some or all legitimate requests from being fulfilled. The range of attacks varies widely, spanning from inundating a server with millions of requests to slow its performance, overwhelming a server with a substantial amount of invalid data, to submitting requests with an illegitimate IP address. In a distributed denial-of-service attack (DDoS attack), the incoming traffic flooding the victim originates from many different sources. More sophisticated strategies are required to mitigate this type of attack; simply attempting to block a single source is insufficient as there are multiple sources.  A DoS or DDoS attack is analogous to a group of people crowding the entry door of a shop, making it hard for legitimate customers to enter, thus disrupting trade and losing the business money. Criminal perpetrators of DoS attacks often target sites or services hosted on high-profile web servers such as banks or credit card payment gateways. Revenge and blackmail, as well as hacktivism, can motivate these attacks.},
+  langid = {english},
+  annotation = {Page Version ID: 1225934024}
+}
+
+@inreference{Wikipedia-Modbus2024,
+  title = {Modbus},
+  booktitle = {Wikipedia},
+  date = {2024-05-23T12:00:13Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Modbus&oldid=1225269451},
+  urldate = {2024-05-27},
+  abstract = {Modbus or MODBUS is a client/server data communications protocol in the application layer. It was originally published by Modicon (now Schneider Electric) in 1979 for use with its programmable logic controllers (PLCs). Modbus has become a de facto standard communication protocol for communication between industrial electronic devices in a wide range of buses and network. Modbus is popular in industrial environments because it is openly published and royalty-free. It was developed for industrial applications, is relatively easy to deploy and maintain compared to other standards, and places few restrictions on the format of the data to be transmitted. The Modbus protocol uses serial communication lines, Ethernet, or the Internet protocol suite as a transport layer. Modbus supports communication to and from multiple devices connected to the same cable or Ethernet network. For example, there can be a device that measures temperature and another device to measure humidity connected to the same cable, both communicating measurements to the same computer, via Modbus. Modbus is often used to connect a plant/system supervisory computer with a remote terminal unit (RTU) in supervisory control and data acquisition (SCADA) systems. Many of the data types are named from industrial control of factory devices, such as ladder logic because of its use in driving relays: a single-bit physical output is called a coil, and a single-bit physical input is called a discrete input or a contact. The development and update of Modbus protocols have been managed by the Modbus Organization since April 2004, when Schneider Electric transferred rights to that organization. The Modbus Organization is an association of users and suppliers of Modbus-compliant devices that advocates for the continued use of the technology. Modbus Organization, Inc. is a trade association for the promotion and development of the Modbus protocol.},
+  langid = {english},
+  annotation = {Page Version ID: 1225269451},
+  file = {/home/remi/Zotero/storage/BGN5LRZN/Modbus.html}
+}
+
+@inreference{Wikipedia-ReplayAttack2024,
+  title = {Replay Attack},
+  booktitle = {Wikipedia},
+  date = {2024-01-04T06:00:13Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Replay_attack&oldid=1193515559},
+  urldate = {2024-05-28},
+  abstract = {A replay attack (also known as a repeat attack or playback attack) is a form of network attack in which valid data transmission is maliciously or fraudulently repeated or delayed. This is carried out either by the originator or by an adversary who intercepts the data and re-transmits it, possibly as part of a spoofing attack by IP packet substitution. This is one of the lower-tier versions of a man-in-the-middle attack. Replay attacks are usually passive in nature. Another way of describing such an attack is: "an attack on a security protocol using a replay of messages from a different context into the intended (or original and expected) context, thereby fooling the honest participant(s) into thinking they have successfully completed the protocol run."},
+  langid = {english},
+  annotation = {Page Version ID: 1193515559},
+  file = {/home/remi/Zotero/storage/92D8YJUP/Replay_attack.html}
 }
