add presentation for choosing scenario

--- a/03-tail/bibliography.bib
+++ b/03-tail/bibliography.bib
@@ -71,3 +71,11 @@
   annotation = {Page Version ID: 1193515559},
   file = {/home/remi/Zotero/storage/92D8YJUP/Replay_attack.html}
 }
+
+@article{Zotero-Compass_security_wmbus_security_whitepaper_v1012013,
+  title = {Compass\_security\_wmbus\_security\_whitepaper\_v1.01},
+  author = {Brunschwiler, Cyrill},
+  date = {2013},
+  langid = {english},
+  file = {/home/remi/Zotero/storage/EYFPYJVN/Brunschwiler - 2013 - compass_security_wmbus_security_whitepaper_v1.01.pdf}
+}
