--- a/03-tail/bibliography.bib
+++ b/03-tail/bibliography.bib
@@ -72,6 +72,28 @@
   file = {/home/remi/Zotero/storage/92D8YJUP/Replay_attack.html}
 }
 
+@video{YouTube-ConnectWirelessMBus2020,
+  entrysubtype = {video},
+  title = {Connect: {{Wireless M-Bus}} Protocol},
+  shorttitle = {Connect},
+  editor = {{Texas Instruments}},
+  date = {2020},
+  url = {https://www.youtube.com/watch?v=IqDx3BT-Wco},
+  urldate = {2024-06-12},
+  abstract = {Get started with our Wireless M-Bus software stack https://www.ti.com/tool/WMBUS Learn from our RF expert, Svein Vetti, about Wireless M-Bus, a Sub-1 GHz  standard for smart metering in Europe for water, gas, heat and electric  meters. Get started with SimpleLink~Dual-Band CC1350~LaunchPad Development Kit~ https://www.ti.com/tool/LAUNCHXL-CC1350 Get started with SimpleLink™ Sub-1 GHz CC1310~LaunchPad™ Development Kit https://www.ti.com/tool/LAUNCHXL-CC1310 Download the ultra-low power water flow measurement for AMR reference design https://www.ti.com/tool/TIDA-010050}
+}
+
+@video{YouTube-WirelessMBusSnippet2018,
+  entrysubtype = {video},
+  title = {Wireless {{M-Bus Snippet}}: {{Security Modes}}},
+  shorttitle = {Wireless {{M-Bus Snippet}}},
+  editor = {{Radiocrafts AS}},
+  date = {2018-10-23},
+  url = {https://www.youtube.com/watch?v=3VyH7hXocCI},
+  urldate = {2024-06-12},
+  abstract = {The first snippet series we will be introducing is about the Wireless M-Bus protocol. In this snippet series Radiocraft’s managing director, Peder Martin Evjen, discusses in detail a variety of interesting features related to the Wireless M-Bus protocol such as the Wireless M-Bus modes, uses, security modes, battery lifetime and more. We hope you enjoy the video as much as we enjoyed making it!  Useful webpages and documentation:  Wireless M-Bus: https://radiocrafts.com/products/wire... Wireless M-Bus Technology: https://radiocrafts.com/technologies/... OMS (Open Metering System): https://radiocrafts.com/technologies/... AN043: Wireless M-Bus Security: https://radiocrafts.com/sdm\_downloads... If you are interested to find out more about the Wireless M-Bus protocol or want to learn about wireless communication in general then subscribe to our channel and visit our website at www.radiocrafts.com.}
+}
+
 @article{Zotero-Compass_security_wmbus_security_whitepaper_v1012013,
   title = {Compass\_security\_wmbus\_security\_whitepaper\_v1.01},
   author = {Brunschwiler, Cyrill},
