--- a/03-tail/bibliography.bib
+++ b/03-tail/bibliography.bib
@@ -10,6 +10,16 @@
   file = {/home/remi/Zotero/storage/RWHWWZG3/hacking-modbus.html}
 }
 
+@online{-LunarMissionsApollo,
+  title = {Lunar - {{Missions}} - {{Apollo}} 11 {{Mission}}},
+  url = {https://www.lpi.usra.edu/lunar/missions/apollo/apollo_11/},
+  urldate = {2024-06-24},
+  abstract = {Apollo 11 was launched on July 16, 1969, at 8:32 AM Central Daylight Time (CDT) with the goal of performing the first human landing on the Moon.},
+  langid = {english},
+  organization = {Lunar and Planetary Institute (LPI)},
+  file = {/home/remi/Zotero/storage/5UXELV4M/apollo_11.html}
+}
+
 @inproceedings{IEEEXplore-IntrusionDetectionIndustrial2017,
   title = {Intrusion {{Detection}} of {{Industrial Control System Based}} on {{Modbus TCP Protocol}}},
   booktitle = {2017 {{IEEE}} 13th {{International Symposium}} on {{Autonomous Decentralized System}} ({{ISADS}})},
@@ -46,6 +56,18 @@
   abstract = {In computing, a denial-of-service attack (DoS attack) is a cyber-attack in which the perpetrator seeks to make a machine or network resource unavailable to its intended users by temporarily or indefinitely disrupting services of a host connected to a network. Denial of service is typically accomplished by flooding the targeted machine or resource with superfluous requests in an attempt to overload systems and prevent some or all legitimate requests from being fulfilled. The range of attacks varies widely, spanning from inundating a server with millions of requests to slow its performance, overwhelming a server with a substantial amount of invalid data, to submitting requests with an illegitimate IP address. In a distributed denial-of-service attack (DDoS attack), the incoming traffic flooding the victim originates from many different sources. More sophisticated strategies are required to mitigate this type of attack; simply attempting to block a single source is insufficient as there are multiple sources.  A DoS or DDoS attack is analogous to a group of people crowding the entry door of a shop, making it hard for legitimate customers to enter, thus disrupting trade and losing the business money. Criminal perpetrators of DoS attacks often target sites or services hosted on high-profile web servers such as banks or credit card payment gateways. Revenge and blackmail, as well as hacktivism, can motivate these attacks.},
   langid = {english},
   annotation = {Page Version ID: 1225934024}
+}
+
+@inreference{Wikipedia-ManinthemiddleAttack2024,
+  title = {Man-in-the-Middle Attack},
+  booktitle = {Wikipedia},
+  date = {2024-06-20T08:26:38Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Man-in-the-middle_attack&oldid=1230046662},
+  urldate = {2024-06-25},
+  abstract = {In cryptography and computer security, a man-in-the-middle (MITM) attack, or on-path attack, is a cyberattack where the attacker secretly relays and possibly alters the communications between two parties who believe that they are directly communicating with each other, as the attacker has inserted themselves between the two user parties. One example of a MITM attack is active eavesdropping, in which the attacker makes independent connections with the victims and relays messages between them to make them believe they are talking directly to each other over a private connection, when in fact the entire conversation is controlled by the attacker. In this scenario, the attacker must be able to intercept all relevant messages passing between the two victims and inject new ones. This is straightforward in many circumstances; for example, an attacker within range of a Wi-Fi access point hosting a network without encryption could insert themselves as a man in the middle. As it aims to circumvent mutual authentication, a MITM attack can succeed only when the attacker impersonates each endpoint sufficiently well to satisfy their expectations. Most cryptographic protocols include some form of endpoint authentication specifically to prevent MITM attacks. For example, TLS can authenticate one or both parties using a mutually trusted certificate authority.},
+  langid = {english},
+  annotation = {Page Version ID: 1230046662},
+  file = {/home/remi/Zotero/storage/XIM4PKSG/Man-in-the-middle_attack.html}
 }
 
 @inreference{Wikipedia-Modbus2024,
