ADD draft modbus

--- a/03-tail/bibliography.bib
+++ b/03-tail/bibliography.bib
@@ -20,6 +20,18 @@
   file = {/home/remi/Zotero/storage/5UXELV4M/apollo_11.html}
 }
 
+@online{-SNIEC6276911522020,
+  title = {{{SN EN IEC}} 62769-115-2:2020},
+  shorttitle = {{{SN EN IEC}} 62769-115-2},
+  date = {2020-11},
+  url = {https://connect.snv.ch/en/sn-en-iec-62769-115-2-2020},
+  urldate = {2024-06-26},
+  abstract = {Field device integration (FDI) - Part 115-2: Profiles - Modbus-RTU},
+  langid = {english},
+  organization = {Swiss Association for Standardization (SNV)},
+  file = {/home/remi/Zotero/storage/5UIEIHIN/2020 - SN EN IEC 62769-115-22020.pdf;/home/remi/Zotero/storage/CYZYA7LY/sn-en-iec-62769-115-2-2020.html}
+}
+
 @inproceedings{IEEEXplore-IntrusionDetectionIndustrial2017,
   title = {Intrusion {{Detection}} of {{Industrial Control System Based}} on {{Modbus TCP Protocol}}},
   booktitle = {2017 {{IEEE}} 13th {{International Symposium}} on {{Autonomous Decentralized System}} ({{ISADS}})},
