ADD entry on bibliography

--- a/03-tail/bibliography.bib
+++ b/03-tail/bibliography.bib
@@ -20,16 +20,20 @@
   file = {/home/remi/Zotero/storage/5UXELV4M/apollo_11.html}
 }
 
-@online{-SNIEC6276911522020,
-  title = {{{SN EN IEC}} 62769-115-2:2020},
-  shorttitle = {{{SN EN IEC}} 62769-115-2},
-  date = {2020-11},
-  url = {https://connect.snv.ch/en/sn-en-iec-62769-115-2-2020},
-  urldate = {2024-06-26},
-  abstract = {Field device integration (FDI) - Part 115-2: Profiles - Modbus-RTU},
+@standard{EN13757,
+  title = {{{EN}} 13757 - {{Communication}} Systems for Meters},
+  shorttitle = {{{EN}} 13757},
+  publisher = {Swiss Association for Standardization (SNV)},
   langid = {english},
-  organization = {Swiss Association for Standardization (SNV)},
-  file = {/home/remi/Zotero/storage/5UIEIHIN/2020 - SN EN IEC 62769-115-22020.pdf;/home/remi/Zotero/storage/CYZYA7LY/sn-en-iec-62769-115-2-2020.html}
+  file = {/home/remi/Zotero/storage/7JFQ8XNR/EN 13757-4-EN.pdf;/home/remi/Zotero/storage/Z56CTXPY/EN 13757-4-FR.pdf}
+}
+
+@standard{EN62769,
+  title = {{{EN IEC}} 62769-115-2:2020 - {{Field}} Device Integration ({{FDI}}) - {{Part}} 115-2: {{Profiles}} - {{Modbus-RTU}}},
+  shorttitle = {{{SN EN IEC}} 62769-115-2:2020},
+  publisher = {Swiss Association for Standardization (SNV)},
+  langid = {english},
+  file = {/home/remi/Zotero/storage/5UIEIHIN/2020 - SN EN IEC 62769-115-22020.pdf}
 }
 
 @inproceedings{IEEEXplore-IntrusionDetectionIndustrial2017,
@@ -56,7 +60,15 @@
   abstract = {Information technology -- Open Systems Interconnection -- Basic Reference Model: The Basic Model},
   langid = {english},
   organization = {Swiss Association for Standardization (SNV)},
-  file = {/home/remi/Zotero/storage/DB3M2N26/1994 - ISOIEC 7498-11994.pdf;/home/remi/Zotero/storage/FF7FPESV/isoiec-7498-1-1994.html}
+  file = {/home/remi/Zotero/storage/FF7FPESV/isoiec-7498-1-1994.html}
+}
+
+@standard{ISO74981,
+  title = {{{ISO}}/{{IEC}} 7498-1:1994 - {{Information}} Technology -- {{Open Systems Interconnection}} -- {{Basic Reference Model}}: {{The Basic Model}}},
+  shorttitle = {{{ISO}}/{{IEC}} 7498-1:1994},
+  publisher = {Swiss Association for Standardization (SNV)},
+  langid = {english},
+  file = {/home/remi/Zotero/storage/DB3M2N26/1994 - ISOIEC 7498-11994.pdf}
 }
 
 @inreference{Wikipedia-DenialofserviceAttack2024,
