--- a/03-tail/bibliography.bib
+++ b/03-tail/bibliography.bib
@@ -71,6 +71,16 @@
   file = {/home/remi/Zotero/storage/DB3M2N26/1994 - ISOIEC 7498-11994.pdf}
 }
 
+@article{OldWaysOT,
+  entrysubtype = {magazine},
+  title = {The {{Old Ways Aren}}’t {{Working}}: {{Let}}’s {{Rethink OT Security}}},
+  author = {{Fahmida Y. Rashid}},
+  date = {2021-11-16},
+  volume = {Dark Reading},
+  url = {https://www.darkreading.com/cyber-risk/the-old-ways-aren-t-working-let-s-rethink-ot-security},
+  langid = {english}
+}
+
 @inreference{Wikipedia-DenialofserviceAttack2024,
   title = {Denial-of-Service Attack},
   booktitle = {Wikipedia},
