prepare for main report thesis

--- a/03-tail/bibliography.bib
+++ b/03-tail/bibliography.bib
@@ -20,6 +20,19 @@
   file = {/home/remi/Zotero/storage/5UXELV4M/apollo_11.html}
 }
 
+@online{-ModifyingPacketsFly2023,
+  title = {Modifying Packets on the Fly (Python)},
+  author = {R00tendo},
+  date = {2023-10-31T09:45:31},
+  url = {https://medium.com/@R00tendo/modifying-packets-on-the-fly-python-76076c5d6e1e},
+  urldate = {2024-07-12},
+  abstract = {Intro},
+  langid = {english},
+  organization = {Medium},
+  keywords = {mitm},
+  file = {/home/remi/Zotero/storage/Y8XEY96L/modifying-packets-on-the-fly-python-76076c5d6e1e.html}
+}
+
 @standard{EN13757,
   title = {{{EN}} 13757 - {{Communication}} Systems for Meters},
   shorttitle = {{{EN}} 13757},
